--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    
+    <script src="app.js" defer></script>
 </head>
 <body>
     <button>
-        Проиграть звук
+        не нажимай!
     </button>
+    <audio src="phuphel.mp3"></audio>
 </body>
 </html>
